test/scc_test/expr/semantic-errors/075.a
075.t:3:5: error: expression must have integral type